<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.SignFragment">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/splash"
            />

        <LinearLayout
            android:id="@+id/SplashLlSignName"
            style="@style/VerticalThemeLayoutInputs"
            >
            <EditText
                android:id="@+id/SignEtName"
                android:textAlignment="textStart"
                android:hint="@string/SplashEtNameText"
                android:inputType="textPersonName"
                style="@style/Sign_EditTextStyle"
                />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/SplashLlSignEmail"
            style="@style/VerticalThemeLayoutInputs"
            android:layout_below="@id/SplashLlSignName"
            >
            <EditText
                android:id="@+id/SignEtEmail"
                style="@style/Sign_EditTextStyle"
                android:textAlignment="textStart"
                android:hint="@string/SplashEtEmailText"
                android:inputType="textEmailAddress"
                />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/SplashLlSignBirthDate"
            style="@style/VerticalThemeLayoutInputs"
            android:layout_below="@+id/SplashLlSignEmail"
            >
            <TextView
                android:id="@+id/SignTvBirthDate"
                style="@style/Sign_TextVierStyle"
                android:textAlignment="textStart"
                android:hint="@string/SplashEtBirthDateText"
                android:inputType="textEmailAddress"
                />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/SplashLlSignBloodType"
            style="@style/VerticalThemeLayoutInputs"
            android:layout_below="@+id/SplashLlSignBirthDate"
            >
            <TextView
                android:id="@+id/SignTvBloodType"
                style="@style/Sign_TextVierStyle"
                android:textAlignment="textStart"
                android:hint="@string/SplashEtBloodTypeText"
                android:inputType="text"
                />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/SplashLlSignGovernment"
            style="@style/VerticalThemeLayoutInputs"
            android:layout_below="@+id/SplashLlSignBloodType"
            >
            <ImageView
                android:id="@+id/SignIvGovernment"
                android:layout_width="50dp"
                android:layout_height="30dp"
                android:src="@drawable/ic_arrow_drop_down_black_24dp"/>
            <Spinner
                android:id="@+id/SignSpGovernment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="invisible">
            </Spinner>
            <TextView
                android:id="@+id/SignTvGovernment"
                android:textAlignment="textStart"
                android:hint="@string/SplashTvGovernmentText"
                style="@style/Sign_TextVierStyle"
                />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/SplashLlSignCity"
            style="@style/VerticalThemeLayoutInputs"
            android:layout_below="@+id/SplashLlSignGovernment"
            >
            <ImageView
                android:id="@+id/SignIvCity"
                android:layout_width="50dp"
                android:layout_height="30dp"
                android:src="@drawable/ic_arrow_drop_down_black_24dp"/>
            <Spinner
                android:id="@+id/SignSpCity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:spinnerMode="dropdown"
                android:visibility="invisible"
                >
            </Spinner>
            <TextView
                android:id="@+id/SignTvCity"
                android:hint="@string/SplashTvCityText"
                style="@style/Sign_TextVierStyle"
                />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/SplashLlSignPhone"
            style="@style/VerticalThemeLayoutInputs"
            android:layout_below="@+id/SplashLlSignCity"
            >
            <EditText
                android:id="@+id/SignEtPhone"
                android:hint="@string/SplashEtPhoneText"
                android:inputType="phone"
                style="@style/Sign_EditTextStyle"
                />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/SplashLlSignPassword"
            style="@style/VerticalThemeLayoutInputs"
            android:layout_below="@+id/SplashLlSignPhone"
            >
            <EditText
                android:id="@+id/SignEtPassword"
                style="@style/Sign_EditTextStyle"
                android:hint="@string/SplashEtPasswordText"
                android:inputType="textPassword"
                android:textAlignment="textEnd"
                />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/SplashLlSignPasswordConfirm"
            style="@style/VerticalThemeLayoutInputs"
            android:layout_below="@+id/SplashLlSignPassword"
            >
            <EditText
                android:id="@+id/SignEtPasswordConfirm"
                style="@style/Sign_EditTextStyle"
                android:hint="@string/SplashEtPasswordConfirmText"
                android:inputType="textPassword"
                android:textAlignment="textEnd"
                />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/SplashLlSignLastDonate"
            style="@style/VerticalThemeLayoutInputs"
            android:layout_below="@+id/SplashLlSignPasswordConfirm"
            >
            <TextView
                android:id="@+id/SignTvLasDonate"
                android:hint="آخر تاريخ تبرع"
                android:drawableLeft="@drawable/calender"
                style="@style/Sign_TextVierStyle"
                />

        </LinearLayout>
        <Button
            android:id="@+id/SignBtRegister"
            android:text="@string/SplashBtRegisterText"
            android:textColor="@color/colorWhite"
            android:layout_below="@+id/SplashLlSignLastDonate"
            android:background="@color/colorNav"
            style="@style/Sign_ButtonStyle"
            />
    </RelativeLayout>
</ScrollView>
