<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.LoginFragment">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
   >
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/splash"
        />
    <ImageView
        android:id="@+id/SplashIvLogo"
        android:layout_width="@dimen/dim_150_dp"
        android:layout_height="@dimen/dim_150_dp"
        android:layout_marginTop="@dimen/dim_40_dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/logo"
        />

    <LinearLayout
        android:id="@+id/SplashLlLoginPhone"
        android:layout_below="@+id/SplashIvLogo"
        style="@style/VerticalThemeLayoutInputs"

        >
        <EditText
            android:id="@+id/LoginEtPhone"
            android:hint="@string/SplashEtPhoneText"
            android:inputType="phone"
            style="@style/Sign_EditTextStyle"
            />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/SplashLlLoginPassword"
        android:layout_below="@+id/SplashLlLoginPhone"
        style="@style/VerticalThemeLayoutInputs"

        >
        <EditText
            android:id="@+id/LoginEtPassword"
            android:hint="@string/SplashEtPasswordText"
            android:inputType="textPassword"
            android:textAlignment="textEnd"
            style="@style/Sign_EditTextStyle"
            />
    </LinearLayout>
    <RelativeLayout
        android:id="@+id/SplashRlForget"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_below="@+id/SplashLlLoginPassword"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:paddingLeft="5dp"
        >

        <TextView
            android:id="@+id/LoginTvForgetPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:layout_centerHorizontal="true"
            android:textColor="@color/SplashTvRightsColor"
            android:textAlignment="center"
            android:textStyle="bold"
            android:text="@string/SplashTvForgetPasswordText"
            android:drawableRight="@drawable/forget"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:paddingTop="5dp"
            />
        <CheckBox
            android:id="@+id/LoginCbRememberMe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/SplashCkText"
            android:checked="true"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:shadowColor="@color/colorBlue"

            />

    </RelativeLayout>
    <Button
        android:id="@+id/SplashBtLogin"
        android:text="@string/SplashBtLoginText"
        android:textColor="@color/colorWhite"
        android:layout_below="@+id/SplashRlForget"
        android:background="@color/colorGreen"
        style="@style/Sign_ButtonStyle"
        />
    <Button
        android:id="@+id/SplashBtSign"
        android:text="@string/SplashBtSignText"
        android:textColor="@color/colorWhite"
        android:layout_below="@+id/SplashBtLogin"
        android:background="@color/colorBlue"
        style="@style/Sign_ButtonStyle"
        />

</RelativeLayout>
</ScrollView>
